feat: restart instances
