# swagger/swagger.yaml
@@ -398,6 +398,30 @@ paths:
           $ref: '#/responses/Error'
       security:
       - oauth2: []
+  /instances/{id}/restart:
+    post:
+      description: Restart instance
+      operationId: restartInstance
+      parameters:
+      - format: uint64
+        in: path
+        name: id
+        required: true
+        type: integer
+        x-go-name: ID
+      responses:
+        "202":
+          description: ""
+        "401":
+          $ref: '#/responses/Error'
+        "403":
+          $ref: '#/responses/Error'
+        "404":
+          $ref: '#/responses/Error'
+        "415":
+          $ref: '#/responses/Error'
+      security:
+      - oauth2: []
   /instances/{id}/save:
     post:
       description: Save instance database
